# minimq

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  default.nix  release.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
ejabberd/: mqtt.yml
examples/: tls_public_broker.rs
examples/minimq-stm32h7/: Cargo.toml  README.md  memory.x  openocd.cfg
examples/minimq-stm32h7/.cargo/: config
examples/minimq-stm32h7/src/: main.rs  mqtt_client.rs  tcp_stack.rs
examples/minimq-stm32h7/stm32h7-ethernet/: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README.tpl  memory.x
examples/minimq-stm32h7/stm32h7-ethernet/examples/: nucleo-h743zi2.rs  stm32h747i-disco-rtfm.rs  stm32h747i-disco.rs
examples/minimq-stm32h7/stm32h7-ethernet/src/: ethernet.rs  ksz8081r.rs  lan8742a.rs  lib.rs
fuzz/: .gitignore  Cargo.toml  README.md  dictionary.txt
fuzz/corpus/: README.md
fuzz/corpus/fuzz_packet_reader/: seed_connack  seed_connack_max_packet_size  seed_disconnect  seed_disconnect_reason_string  seed_publish_correlation_data  seed_publish_qos0  seed_publish_response_topic  seed_publish_user_property  seed_pubrec_reason_string  seed_pubrel
fuzz/corpus/fuzz_received_packet/: seed_connack  seed_connack_max_packet_size  seed_disconnect  seed_disconnect_reason_string  seed_pingresp  seed_puback  seed_puback_reason_string  seed_pubcomp  seed_pubcomp_reason_string  seed_publish_correlation_data  seed_publish_qos0  seed_publish_response_topic  seed_publish_user_property  seed_pubrec  seed_pubrec_reason_string  seed_pubrel  seed_pubrel_reason_string  seed_suback  seed_suback_user_property  seed_unsuback
fuzz/corpus/fuzz_serializer/: seed_connect  seed_connect_with_props  seed_disconnect_req  seed_pingreq  seed_puback  seed_puback_reason_props  seed_pubcomp  seed_publish  seed_publish_correlated  seed_publish_with_props  seed_pubrec  seed_pubrec_reason_props  seed_pubrel  seed_subscribe  seed_subscribe_with_props  seed_unsubscribe  tiny_buf
fuzz/fuzz_targets/: fuzz_packet_reader.rs  fuzz_received_packet.rs  fuzz_serializer.rs
src/: broker.rs  config.rs  deserialize.rs  design_parameters.rs  fuzzing.rs  lib.rs  message_types.rs  minimq.rs  mqtt_client.rs  nanomq.rs  network_manager.rs  packet_reader.rs  packet_writer.rs  packets.rs  properties.rs  publication.rs  reason_codes.rs  reply_options.rs  republication.rs  ring_buffer.rs  serialize.rs  session_state.rs  tests.rs  timer.rs  transport.rs  types.rs  varint.rs  will.rs  wire.rs
src/de/: deserialize.rs  deserializer.rs  mod.rs  packet_parser.rs  packet_reader.rs  packets.rs  received_packet.rs
src/mqtt_client/: core.rs  mod.rs  outbound.rs  protocol.rs  session.rs
src/mqtt_client/session/: drive.rs  handshake.rs  inbound.rs  mod.rs  operations.rs  state.rs  tests.rs
src/ser/: control_packet.rs  mod.rs  packet_writer.rs  serialize.rs  serializer.rs
src/serde_minimq/: deserializer.rs  mod.rs
tests/: async_client.rs  at_least_once_subscription.rs  deferred_payload.rs  exactly_once_subscription.rs  exactly_once_transmission.rs  integration_test.rs  poll_result.rs  real_broker.rs  reconnection.rs
tests/stack/: mod.rs
tests/support/: mod.rs
