[package]
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
readme = "README.md"
name = "minimq-stm32h7"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
cortex-m-log = { version = "0.6.1", features = ["log-integration"] }
stm32h7xx-hal = { version = "0.6.0", features = ["stm32h743v", "rt"] }
stm32h7-ethernet = { path = "stm32h7-ethernet" }
cortex-m-rtic = "0.5.3"
heapless = "0.5.5"
nb = "0.1.2"
log = "0.4.8"

serde = {version = "1.0", features = ["derive"], default-features = false }
serde-json-core = "0.1"

[dependencies.minimq]
path = "../../"

[dependencies.smoltcp]
version = "0.6.0"
default-features = false
features = ["ethernet", "proto-ipv4", "socket-tcp", "proto-ipv6"]

[dependencies.si7021]
git = "https://github.com/ryan-summers/si7021-rs"

[features]
semihosting = ["cortex-m-log/semihosting"]

# this lets you use `cargo fix`!
[[bin]]
name = "minimq-stm32h7"
test = false
bench = false

[profile.dev]
debug = true
opt-level = 0

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
