[package]
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
readme = "README.md"
name = "minimq-stm32h7"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
cortex-m-log = { version = "0.6.1", features = ["log-integration"] }
cortex-m-rtic = "^0.5.5"
heapless = "0.5.5"
nb = "0.1.2"
log = "0.4.8"

serde = {version = "1.0", features = ["derive"], default-features = false }
serde-json-core = "0.1"

[dependencies.stm32h7xx-hal]
version = "0.7.1"
features = ["stm32h743v", "rt", "ethernet", "phy_lan8742a"]

[dependencies.minimq]
path = "../../"

[dependencies.smoltcp]
# Using master branch until PR 367 lands on crates.io.
# https://github.com/smoltcp-rs/smoltcp/pull/367
git = "https://github.com/smoltcp-rs/smoltcp"
branch = "master"
default-features = false
features = ["ethernet", "proto-ipv4", "socket-tcp", "proto-ipv6"]

[patch.crates-io]
# Make dependencies use master branch for smoltcp until PR 367 lands on
# crates.io.
# https://github.com/smoltcp-rs/smoltcp/pull/367
smoltcp = {git = "https://github.com/smoltcp-rs/smoltcp", branch = "master"}


[features]
semihosting = ["cortex-m-log/semihosting"]

# this lets you use `cargo fix`!
[[bin]]
name = "minimq-stm32h7"
test = false
bench = false

[profile.dev]
debug = true
opt-level = 0

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
